tablet scripts and fixes

--- a/apps/config.jsonc
+++ b/apps/config.jsonc
@@ -12,7 +12,7 @@
       "color": {
         "green": "32",
         "yellow": "33",
-         "red": "31m"
+         "red": "31"
       }
     },
       "bar": {
